--- a/index.html
+++ b/index.html
@@ -13,11 +13,10 @@
     <!-- bootstrap js -->
     <script src="./vendors/bootstrap-5/js/bootstrap.bundle.min.js"></script>
     <!-- fontawesome css -->
-     <link rel="stylesheet" href="./vendors/fontawesome-free-6/css/all.css">
+    <link rel="stylesheet" href="./vendors/fontawesome-free-6/css/all.css">
 </head>
 
 <body>
-
     <!-- hero start -->
     <section id="hero">
         <div class="hero-container">
@@ -43,6 +42,30 @@
         </div>
     </section>
     <!-- hero end -->
+    <!-- navbar start-->
+    <header id="navbar" class="container-fluid shadow-lg position-sticky top-0">
+        <div class="container">
+            <nav class="navbar navbar-expand justify-content-between align-items-center navbar-light">
+                <div class="navbar-brand d-flex align-items-center gap-3">
+                    <div class="bg-danger rounded-circle position-relative" style="width: 40px; height: 40px;">
+                        <i class="fa-solid fa-code position-absolute start-50 top-50 translate-middle text-light"></i>
+                    </div>
+                    <span class="fw-bold">Code-Hopper</span>
+                </div>
+                <ul class="navbar-nav gap-5">
+                    <li class="nav-item"><a class="nav-link" href="">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="">Portfolio</a></li>
+                    <li class="nav-item"><a class="nav-link" href="">Services</a></li>
+                    <li class="nav-item"><a class="nav-link" href="">Connect</a></li>
+                </ul>
+                <div class="">
+                    <button class="navbar-cta-button">Hire Me !</button>
+                </div>
+            </nav>
+        </div>
+    </header>
+    <!-- navbar end-->
 
 </body>
 <!-- custom js -->
