--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </section>
     <!-- hero end -->
     <!-- navbar start-->
-    <header id="navbar" class="container-fluid shadow-lg position-sticky top-0">
+    <header id="navbar" class="container-fluid shadow-sm position-sticky top-0">
         <div class="container">
             <nav class="navbar navbar-expand justify-content-between align-items-center navbar-light">
                 <div class="navbar-brand d-flex align-items-center gap-3">
@@ -59,13 +59,60 @@
                     <li class="nav-item"><a class="nav-link" href="">Services</a></li>
                     <li class="nav-item"><a class="nav-link" href="">Connect</a></li>
                 </ul>
-                <div class="">
-                    <button class="navbar-cta-button">Hire Me !</button>
-                </div>
+                <button class="navbar-cta-button">Hire Me !</button>
             </nav>
         </div>
     </header>
     <!-- navbar end-->
+    <!-- about start -->
+    <section id="about">
+        <div class="container-fluid">
+            <div class="container">
+                <div class="row gap-5 align-items-center" style="padding: 7rem 0;">
+                    <div class="col d-flex gap-3 flex-column">
+                        <h1>Let us create...</h1>
+                        <p class="text-secondary">You may contribute a small amount via PayPal if Nomad Force Template
+                            is useful for you. This will absolutely help us to keep creating better CSS templates for
+                            you.</p>
+                        <p class="text-secondary">We provide you 100% free templates on TemplateMo website. Images are
+                            provided by FreePik and Unsplash websites.</p>
+                    </div>
+                    <div class="col">
+                        <p class="text-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni
+                            exercitationem ullam tenetur fugit harum accusantium sapiente, corporis incidunt! Est porro
+                            obcaecati, mollitia nulla enim corporis sint officiis provident ab architecto.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="about-work">
+        <div class="container-fluid">
+            <div class="about-work-container row ">
+                <div class="info col bg-danger">
+                    <div class="row">
+                        <div class="col image bg-dark px-0">
+                            <img class="img-fluid" src="./media/about-1-img.jpg" alt="">
+                        </div>
+                        <div class="col text px-5">
+                            <span class="fs-1 fw-bolder">We’re - idealists and strategic thinkers.</span>
+                            <span>Over six years in the video business</span>
+                            <div class="d-flex flex-column">
+                                <a class="text-light" href="">Read News & Events</a>
+                                <a class="text-light" href="">Work with Me</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="corousel col bg-primary">
+                    <div></div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- about end -->
 
 </body>
 <!-- custom js -->
