--- a/index.html
+++ b/index.html
@@ -105,8 +105,26 @@
                         </div>
                     </div>
                 </div>
-                <div class="corousel col bg-primary">
-                    <div></div>
+                <div class="corousel position-relative col px-0">
+                    <div class="corousel-image-container bg-dark p-0 position-relative" style="width:100%; height:100%;">
+                        <img id="about-corousel" class="img-fluid position-absolute top-0 start-0 w-100 h-100" src="./media/about-2-img.jpg" alt="" style="object-fit:cover;">
+                    </div>
+                    <div class="corousel-controls w-50 py-3 px-2">
+                        <div class="row">
+                            <div class="col-8 title text-light d-flex flex-column">
+                                <span class="fs-3 fw-bold">corousel title</span>
+                                <span>position</span>
+                            </div>
+                            <div class="col buttons">
+                                <button id="about-corousel-prev-btn">
+                                    <i class="fa-solid fa-chevron-left"></i>
+                                </button>
+                                <button id="about-corousel-next-btn">
+                                    <i class="fa-solid fa-chevron-right"></i>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
